# supreme-enigma-rust

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  WORKSPACE
env/: BUILD.bazel
external_crate_builds/: 0001-Fix-build-with-Bazel.patch
notes/: BUILD.bazel  DisplayScript.ps1  run_powershell_script.cc  rust-project.ps1
rust_src/: BUILD.bazel
src/: BUILD.bazel  main.rs  system_info.rs
