module(name = "hello-world")

# bazel_dep(name = "bazel_skylib", version = "1.7.1")
# bazel_dep(name = "rules_cc", version = "0.1.1")
# bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
# bazel_dep(name = "rules_go", version = "0.50.1")
# bazel_dep(name = "rules_multitool", version = "0.4.0")
# bazel_dep(name = "rules_pkg", version = "1.1.0")
# bazel_dep(name = "rules_python", version = "1.1.0")

bazel_dep(name = "toolchains_llvm", version = "1.4.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "20.1.4",
)

use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "rules_rust", version = "0.60.0")

RUST_EDITION = "2024"  # NOTE: 2024 will be released with Rust 1.86.0
RUST_VERSION = "1.86.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

###############################################################################
# Rust Dependencies #
###############################################################################

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
