module(name = "hello-world")

bazel_dep(name = "bazel_env.bzl", version = "0.1.0", dev_dependency = True)
bazel_dep(name = "rules_rust", version = "0.60.0")

RUST_EDITION = "2024"  # NOTE: 2024 will be released with Rust 1.86.0
RUST_VERSION = "1.86.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

###############################################################################
# Rust Dependencies #
###############################################################################

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
