module(name = "hello-world")

bazel_dep(name = "bazel_env.bzl", version = "0.1.0", dev_dependency = True)

bazel_dep(name = "rules_rust", version = "0.60.0")

RUST_EDITION = "2024"  # NOTE: 2024 will be released with Rust 1.86.0

RUST_VERSION = "1.86.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

###############################################################################
# Rust Dependencies #
###############################################################################
EGUI_VERSION = "0.31.1"
crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)

crate.spec(package = "anyhow", version = "1.0.98")
crate.spec(package = "bytesize", version = "2.0.1")
crate.spec(package = "iced", features = ["system"], version = "0.13.1")
crate.spec(package = "egui", version = EGUI_VERSION)
crate.spec(package = "eframe", features = ["default", "__screenshot"], version = EGUI_VERSION)
crate.spec(package = "egui_extras", features = ["default", "image"], version = EGUI_VERSION)
crate.spec(package = "env_logger", version = "0.11.8")

crate.annotation(
    crate = "khronos_api",
    patches = ["@//external_crate_builds:0001-Fix-build-with-Bazel.patch"],
    patch_args = ["-p1"],
)

crate.from_specs()

use_repo(crate, "crates")
